feat(front): Configuracion de PWA
primera version de PWA

refs: (#51)

--- a/client/NoWait/src/index.html
+++ b/client/NoWait/src/index.html
@@ -8,11 +8,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script src="https://kit.fontawesome.com/461bd6f27a.js" crossorigin="anonymous"></script>
+  <link rel="manifest" href="manifest.webmanifest">
+  <meta name="theme-color" content="#FF1D25">
 </head>
 
 <body>
   <app-root>
-    <div #initSplash class="init-splash">
+    <div #initsplash="" class="init-splash">
       <svg class="animate-pulse" width="160" viewBox="0 0 270 211" fill="none" xmlns="http://www.w3.org/2000/svg">
         <g clip-path="url(#clip0_6_55)">
           <path
@@ -42,6 +44,7 @@
       </svg>
     </div>
   </app-root>
+  <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 
 </html>
